// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-popup.vue Demo-右键菜单 1`] = `
<div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    右键菜单
    <transition-stub name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <nav class="root">
          <a class="root" target="_self">
            <span vusion-slot-name-edit="text">指南</span>
            <div></div>
          </a>
          <a class="root" target="_self">
            <span vusion-slot-name-edit="text">概念</span>
            <div></div>
          </a>
          <a class="root" target="_self">
            <span vusion-slot-name-edit="text">组件</span>
            <div></div>
          </a>
        </nav>
      </div>
    </transition-stub>
  </a>
</div>
`;

exports[`u-popup.vue Demo-基本用法 1`] = `
<div>
  <transition-stub name="fade">
    <div class="root" merge-borders="true" style="display: none;">
      <span class="arrow" data-popper-arrow></span>
    </div>
  </transition-stub>
</div>
`;

exports[`u-popup.vue Demo-基本用法 2`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      内容
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="body" vusion-slot-name="default">使用 content 属性添加内容</div>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      标题
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="head">
            <div class="title">标题</div>
          </div>
          <div class="body" vusion-slot-name="default">使用 title 属性添加标题</div>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      使用 slot
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="head">
            <div class="title">
              <span>标题 <div class="root">
                  <span class="value">3</span>
                </div>
              </span>
            </div>
          </div>
          <div class="body" vusion-slot-name="default">
            <span>使用 <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text"> slot </a> 可以添加一些复杂功能</span>
          </div>
        </div>
      </transition-stub>
    </a>
  </div>
</div>
`;

exports[`u-popup.vue Demo-弹出方位 1`] = `
<div>
  <div class="root" direction="vertical" style="min-width: 300px; max-width: 550px;" type vusion-slot-name="default">
    <div class="root" direction="horizontal" gap="small" justify="center" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上左
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上右
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: left;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左上
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左下
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: right;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右上
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右下
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
    <div class="root" direction="horizontal" gap="small" justify="center" style="clear: both;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下左
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下右
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
  </div>
</div>
`;

exports[`u-popup.vue Demo-手动触发 1`] = `
<a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
  弹出
  <transition-stub name="fade">
    <div class="root" merge-borders="true" style="display: none;">
      <span class="arrow" data-popper-arrow></span>
      <div class="body" vusion-slot-name="default">Popup</div>
    </div>
  </transition-stub>
</a>
`;

exports[`u-popup.vue Demo-禁用状态 1`] = `
<div>
  <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
    disabled
    <transition-stub name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <div class="body" vusion-slot-name="default">Popup</div>
      </div>
    </transition-stub>
  </a>
</div>
`;

exports[`u-popup.vue Demo-自定义 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Dropdown
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <nav class="root">
            <a class="root" target="_self">
              <span vusion-slot-name-edit="text">指南</span>
              <div></div>
            </a>
            <a class="root" target="_self">
              <span vusion-slot-name-edit="text">概念</span>
              <div></div>
            </a>
            <a class="root" target="_self">
              <span vusion-slot-name-edit="text">组件</span>
              <div></div>
            </a>
          </nav>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Textarea
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="root">
            <span>b</span>
            <textarea class="input"></textarea>
            <div class="handle" draggable="draggable" resize="vertical"></div>
          </div>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      TreeView
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="root">
            <div class="root">
              <div class="item" style="padding-left: 0px;" tabindex="0">
                <div class="expander" expand-trigger="click" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
                <div class="root">
                  <div class="item" style="padding-left: 30px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点1.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" style="padding-left: 30px;" tabindex="0">
                    <div class="expander" expand-trigger="click" style="width: 30px;"></div>
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点1.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                    <div class="root">
                      <div class="item" style="padding-left: 60px;" tabindex="0">
                        <div class="text" draggable="false" style="margin-left: 30px;">
                          <span>节点1.2.1</span>
                        </div>
                      </div>
                      <div class="sub" style="display: none;">
                      </div>
                    </div>
                    <div class="root">
                      <div class="item" style="padding-left: 60px;" tabindex="0">
                        <div class="text" draggable="false" style="margin-left: 30px;">
                          <span>节点1.2.2</span>
                        </div>
                      </div>
                      <div class="sub" style="display: none;">
                      </div>
                    </div>
                  </div>
                </div>
                <div class="root">
                  <div class="item" style="padding-left: 30px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点1.3</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" style="padding-left: 30px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点1.4</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 0px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 0px;" tabindex="0">
                <div class="expander" expand-trigger="click" style="width: 30px;"></div>
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <span>节点3</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
                <div class="root">
                  <div class="item" style="padding-left: 30px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点3.1</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
                <div class="root">
                  <div class="item" style="padding-left: 30px;" tabindex="0">
                    <div class="text" draggable="false" style="margin-left: 30px;">
                      <span>节点3.2</span>
                    </div>
                  </div>
                  <div class="sub" style="display: none;">
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </a>
  </div>
</div>
`;

exports[`u-popup.vue Demo-触发方式 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      hover
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="body" vusion-slot-name="default">Popup</div>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      click（默认）
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="body" vusion-slot-name="default">Popup</div>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      right-click
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="body" vusion-slot-name="default">Popup</div>
        </div>
      </transition-stub>
    </a>
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      double-click
      <transition-stub name="fade">
        <div class="root" merge-borders="true" style="display: none;">
          <span class="arrow" data-popper-arrow></span>
          <div class="body" vusion-slot-name="default">Popup</div>
        </div>
      </transition-stub>
    </a>
  </div>
</div>
`;

exports[`u-popup.vue Demo-跟随鼠标 1`] = `
<div>
  <div class="root" direction="vertical" style="min-width: 300px; max-width: 550px;" type vusion-slot-name="default">
    <div class="root" direction="horizontal" gap="small" justify="center" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上左
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        上右
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: left;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左上
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        左下
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
    <div class="root" direction="vertical" justify="center" style="width: 150px; float: right;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右上
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        右下
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
    <div class="root" direction="horizontal" gap="small" justify="center" style="clear: both;" type vusion-slot-name="default">
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下左
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下边
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
      <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        下右
        <transition-stub name="fade">
          <div class="root" merge-borders="true" style="display: none;">
            <span class="arrow" data-popper-arrow></span>
            <div class="body" vusion-slot-name="default">Popup</div>
          </div>
        </transition-stub>
      </a>
    </div>
  </div>
</div>
`;
